--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "Brent Kirby",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bottega-code-school/js-builder/issues"
+    "url": "https://brents-capstone.herokuapp.com/"
   },
   "homepage": "https://github.com/BrentKirby40",
   "dependencies": {
