--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
     "postcss-loader": "^2.1.6",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-redux": "5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
+    "styled-components": "^5.3.3",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
